--- a/appstate.json
+++ b/appstate.json
@@ -1,57 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100091484272313%22%3A%22ely4vWy0%22%7D",
+        "value": "%7B%22100080899898916%22%3A%22Ha8M59wa%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.826Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "datr",
-        "value": "00W_ZvSP15ds44mm7l7I8f-7",
+        "value": "4yPLZpbp57NMPsCttvm2jxLS",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "sb",
-        "value": "00W_ZjpHjQ2RFcskgQ05Jr4B",
+        "value": "4yPLZgoN94aC-K3XCwwXhb6G",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B746x393x2.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "locale",
@@ -59,8 +32,35 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B746x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "wd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "c_user",
@@ -86,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "fr",
-        "value": "0jXSNA9rrHKPJd0vn.AWUHtxBPai8gOgb8ikk4RF_LFbA.Bmv0XT..AAA.0.0.BmyKUX.AWU-K6p1oro",
+        "value": "0vK8JjdbgVZoDe0NS.AWVvSHY7sGXYkimfl6iVYUd2T9I.Bmyzd7..AAA.0.0.Bm0T-1.AWXYxaHbITM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "xs",
-        "value": "46%3Abg899bxg3zhznw%3A2%3A1724425495%3A-1%3A5067",
+        "value": "27%3AwPIgmncU_ooyJg%3A2%3A1724989365%3A-1%3A5100",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2601%3Btimestamp%3A1724425497",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     },
     {
         "key": "fbl_st",
-        "value": "101230251%3BT%3A28740424",
+        "value": "100724763%3BT%3A28749822",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T15:05:26.731Z",
-        "lastAccessed": "2024-08-23T15:05:26.731Z"
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2605%3Btimestamp%3A1724989368",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-30T03:43:55.827Z",
+        "lastAccessed": "2024-08-30T03:43:55.827Z"
     }
 ]
